:pencil2: Fix wrong fontface naming path

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -18,7 +18,7 @@
 
 @font-face {
   font-family: 'Avara';
-  src: url('/fonts/Avara-BlodItalic.otf') format('opentype');
+  src: url('/fonts/Avara-BoldItalic.otf') format('opentype');
   font-weight: 400;
   font-style: italic;
   font-display: swap;
